# Real_Time_Crypto_Pump_And_Dump_Detection

./: main.py  pyproject.toml
backend/backend/: settings.py
data/: .gitignore  fetch_data.py
notebooks/: data_cleaning.ipynb  model_training.ipynb
