[project]
name = "real-time-crypto-pump-and-dump-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "django>=6.0.3",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "python-binance>=1.0.35",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "scikit-learn>=1.8.0",
    "ta>=0.11.0",
    "tqdm>=4.67.3",
    "websockets>=16.0",
]
